--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -959,3 +959,26 @@ footer .owner p a {
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+
+
+
+
+.bgimagealphacontainer {  position: relative; }
+
+.bgimagealphacontainer:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-image: url('http://r3pwn.github.io/images/bgtile.png');
+   opacity: 0.5;
+}
+
+.content {
+    position: relative; 
+    z-index: 2;
+}​
